using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Miniville.Enums
{
    enum CardType
    {
        WHEAT,      //WHEAT LOGO
        COW,         //COW LOGO
        SHOP,       //CUBIC HOUSE LOGO
        CUP,        //COFFEE LOGO
        GEAR,       //GEAR LOGO
        TOWER,      //TOWER LOGO
        FACTORY,    //SEEMS LIKE FACTORY LOGO
        BOMB,       //LE LOGO DU MARCHÉ
    }
}
