using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace Miniville.Enums
{
    enum PlayerType
    {
			HUMAN,
			BOT
    }
}
