using System;

namespace Miniville
{
    class Program
    {
        static void Main(string[] args)
        {
            Game g = new Game();
        }
    }
}